<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <POU Name="fbWorldWeatherWatch" Id="{93bf999a-20b2-4c2f-97ca-b40c4de722c6}" SpecialFunc="None">
    <Declaration><![CDATA[{attribute wpf [Container(Layout.Tabs)]}
FUNCTION_BLOCK fbWorldWeatherWatch
VAR	
	{attribute addProperty Name "<#North pole station#>"}
	NorthPole : structWeatherStation := (StationICAO := 'CYRB');
	{attribute addProperty Name "<#South pole station#>"}
	SouthPole : structWeatherStation := (StationICAO := 'NZSP');
	{attribute addProperty Name "<#Verl, Germany#>"}
	Verl : structWeatherStation := (StationICAO := 'EDLP');
	{attribute addProperty Name "<#Kriva, Slovakia#>"}
	Kriva : structWeatherStation := (StationICAO := 'LZIB');	
END_VAR
 ]]></Declaration>
    <Implementation>
      <ST><![CDATA[]]></ST>
    </Implementation>
    <Method Name="PlcComments" Id="{22dca355-29cb-43b4-8264-e6625ea1cc65}">
      <Declaration><![CDATA[METHOD PlcComments : STRING[255]
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[(* PLC IS COMMENTING ON WEATHER, GETTING INFORMATION FROM WEATHER STATIONS FROM ARROUND THE WORLD *)

Utils.FluentString.Append('<#So, the weather situation is following#>: $N');

IF (NorthPole.StationStatus = enumStationStatus.Available) THEN
	IF(NorthPole.Temp > -50) THEN
		Utils.FluentString.Append('<#It is fairly warm at the north pole.#>$N');
	ELSE
		Utils.FluentString.Append('<#It is as cold as it should be at the nort pole.#>$N');
	END_IF;
ELSE;
	Utils.FluentString.Append('<#North pole station is not available.#>$N');
END_IF; 


IF (SouthPole.StationStatus = enumStationStatus.Available) THEN
	IF(SouthPole.Temp > -50) THEN
		Utils.FluentString.Append('<#It is fairly warm at the south pole.#>$N');
	ELSE
		Utils.FluentString.Append('<#It is as cold as it should be at the souht pole.#>$N');
	END_IF; 
ELSE;
	Utils.FluentString.Append('<#South pole station is not available.#>$N');
END_IF; 


IF (Verl.StationStatus = enumStationStatus.Available) THEN
	IF(Verl.Temp > 0) THEN
		Utils.FluentString.Append('<#It is not freezing in Verl.#>$N');
	ELSE
		Utils.FluentString.Append('<#It is freezing in Verl.#>$N');
	END_IF; 
ELSE;
	Utils.FluentString.Append('<#Verl station is not available.#>$N');
END_IF; 


IF (Kriva.StationStatus = enumStationStatus.Available) THEN
	IF(Kriva.Temp > 0) THEN
		Utils.FluentString.Append('<#It is not freezing in Kriva.#>$N');
	ELSE
		Utils.FluentString.Append('<#It is freezing in Kriva.#>$N');
	END_IF; 
ELSE;
	Utils.FluentString.Append('<#Kriva station is not available.#>$N');
END_IF; 

PlcComments := Utils.FluentString.Result;


]]></ST>
      </Implementation>
    </Method>
    <LineIds Name="fbWorldWeatherWatch">
      <LineId Id="55" Count="0" />
    </LineIds>
    <LineIds Name="fbWorldWeatherWatch.PlcComments">
      <LineId Id="6" Count="49" />
      <LineId Id="5" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>